# bank-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml  pytest.env  pytest.ini  setup.cfg  uvicorn_workers.py
docker/: .dockerignore  Dockerfile  docker-compose.yaml  entrypoint.sh
docs/: bank-api.json
scripts/: seeds.py
src/: main.py  rest.py  settings.py
src/bank_api/adapters/: jwt_auth_adapter.py
src/bank_api/adapters/repositories/: payment_account_repository.py  user_repository.py
src/bank_api/controllers/: auth_controller.py  payment_account_controller.py  transfer_controller.py
src/bank_api/exceptions/: base_exception.py  http_exceptions.py  payment_account_exceptions.py  user_exceptions.py
src/bank_api/middlewares/: auth.py
src/bank_api/ports/: auth_adapter_interface.py  auth_service_interface.py  payment_account_repository_interface.py  payment_account_service_interface.py  repository_interface.py  transfer_service_interface.py  user_repository_interface.py
src/bank_api/schemas/: auth_schemas.py  payment_account_schemas.py  transfer_schemas.py
src/bank_api/services/: auth_service.py  payment_account_service.py  transfer_service.py
src/bank_api/utils/: enviroment.py  log.py  password.py
src/config/: dependencies.py
src/config/database/: __init__.py
src/config/database/migrations/: env.py
src/config/database/models/: __init__.py  base.py  payment_account.py  transaction.py  user.py
tests/: conftest.py  test_health_check.py
tests/adapters/repositories/: test_payment_account_repository.py  test_user_repository.py
tests/services/: test_auth_service.py  test_payment_account_service.py  test_transfer_service.py
(+3 files in other folders)
